--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --mode production",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "webpack",
@@ -32,6 +33,7 @@
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-prettier": "2.6.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.8.3",
     "prettier": "1.12.1",
@@ -66,5 +68,8 @@
         }
       ]
     }
+  },
+  "dependencies": {
+    "marked": "^0.3.19"
   }
 }
